--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>manitodo 隐私政策</h1>
-    <p class="update-date">最后更新：2024年[当前月份]</p>
+    <p class="update-date">最后更新：2025年9月14日</p>
     
     <h2>简介</h2>
     <p>manitodo（"我们"）重视您的隐私。本隐私政策说明我们如何收集、使用和保护您的个人信息。</p>
@@ -92,7 +92,7 @@
     <h2>联系我们</h2>
     <p>如果您对本隐私政策有任何问题，请通过以下方式联系我们：</p>
     <ul>
-        <li>邮箱：[你的邮箱]</li>
+        <li>邮箱：wenjiaqi8255@outlook.com</li>
     </ul>
     
     <hr>
